--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -1,1 +1,5 @@
-<p>top-bar works!</p>
+<a [routerLink]="['/']">
+    <h1>My Store</h1>
+  </a>
+  
+  <a [routerLink]="['/cart']" class="button fancy-button"><i style="margin-right: 10px;" class="fa fa-shopping-cart"></i>Checkout</a>
