--- a/src/app/product-alerts/product-alerts.component.html
+++ b/src/app/product-alerts/product-alerts.component.html
@@ -1,3 +1,4 @@
 <p *ngIf="product.price > 700">
-    <button (click)="notify.emit()">Notify Me</button>
-  </p>
+  <button class="btn btn-outline-primary btn-sm"
+  (click)="notify.emit()"><fa-icon [icon]="faSms"></fa-icon> Notify Me</button>
+</p>
