--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -1,7 +1,7 @@
  <div class="container-fluid pt-1" style="background-color:#1976D2">
   <div class="row">
   <div class="col-6"><a>
-  <h2 class="pt-1" [routerLink]="['/']">My Store</h2>
+  <h2 class="pt-1" [routerLink]="['/']"><fa-icon class="icon" [icon]="faMobileAlt"></fa-icon>Phone Model Store &trade;</h2>
 </a>
 </div>
 
