--- a/src/app/product-list/product-list.component.css
+++ b/src/app/product-list/product-list.component.css
@@ -12,3 +12,10 @@ h2{
     font-weight:700;
     margin-top: -20px;
   }
+
+  .phone-details {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    margin-right: 20px;
+  }
